# i3h_response_by_variance

./: Dockerfile  Makefile  README.md  docker-compose.yml  entry.py  etl.py  optimize.py  pyproject.toml  test_etl.py
data_testing/: test.csv
data_testing/output/: output.csv
response_by_variance/: etl.py  optimize.py
