[project]
name = "response-by-variance-etl"
version = "0.1.0"
description = ""
authors = [
    {name = "Jim Snavely",email = "ludflu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "polars (>=1.21.0,<2.0.0)",
    "pytest (>=8.3.4,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
